Translations updated The main page is fully redesigned Benefits section added Hotel single page implemented Themes mode implemented

--- a/front-end/public/locales/ua/translation.json
+++ b/front-end/public/locales/ua/translation.json
@@ -3,8 +3,12 @@
   "home": "Головна",
   "about": "Про нас",
   "destination": "Пункт призначення",
+  "chooseCity": "Оберіть місто",
+  "location": "Місце призначення",
   "checkIn": "Дата заселення",
   "checkOut": "Дата виселення",
+  "chooseDate": "Оберіть дату",
+  "date": "дата",
   "adults": "Дорослі",
   "children": "Діти",
   "submit": "Надіслати",
@@ -28,5 +32,38 @@
   "minElevenChars": "має бути не менше 11 символів!",
   "mustContainDotCom": "має містити .com у назві!",
   "mustBeOverSixteen": "повинен бути більше 16 років!",
-  "cannotBeOver": "не може бути більше ніж"
+  "cannotBeOver": "Не може бути більше ніж",
+  "lightMode": "Світлий режим",
+  "darkMode": "Темний режим",
+  "pricing": "Ціни",
+  "services": "Послуги",
+  "deskSupport": "Підтримка",
+  "ourMission": "Наша місія",
+  "career": "Вакансії",
+  "privacy": "Конфіденційність",
+  "termsOfUse": "Умови використання",
+  "discoverPlace": "Знайти місце",
+  "homeBannerTextUp": "Відкрийте надзвичайний комфорт готелів",
+  "homeBannerTextDown": "Ви коли-небудь стикалися з готелем, в якому відчуваєш себе як вдома? Якщо ні, то ви можете знайти такий готель тут.",
+  "bookingHotel": "Бронювання готелю",
+  "homeBookingHotelUnder": "Розпочніть бронювання місця для проживання.",
+  "emailEnter": "Введіть свій email",
+  "invalidEmail": "Невірний формат email",
+  "requiredEmail": "Поле email є обов'язковим",
+  "subscribe": "Підписатися",
+  "joinOurNewsletter": "Підпишіться на нашу розсилку",
+  "jointVenture": "Спільне підприємство — це заявка на стягнення плати за узгодженим планом",
+  "noSpam": "Ми надсилатимемо вам корисного листа раз на тиждень. Жодного спаму.",
+  "rightsReserved": "Всі права захищені.",
+  "quickLink": "Головні посилання",
+  "company": "Компанія",
+  "legalTerms": "Юридичні умови",
+  "viewAll": "Переглянути всі",
+  "recommendedHotel": "Рекомендований готель",
+  "monthHotels": "Готелі місяця",
+  "monthHotelsBottom": "Відкрийте для себе наші найкращі готелі, рекомендовані для вас під час відпустки чи навіть ділової поїздки.",
+  "benefit": "Переваги",
+  "benefitTitle": "Зручне розташування навколо готелів",
+  "benefitBody": "Наша платформа забезпечує клієнтам максимальний комфорт для приємного відпочинку в улюблених готелях.",
+  "cannotBeLess": "Не може бути менше ніж"
 }
