--- a/front-end/public/locales/en/translation.json
+++ b/front-end/public/locales/en/translation.json
@@ -3,8 +3,12 @@
   "home": "Home",
   "about": "About",
   "destination": "Destination",
-  "checkIn": "Check In",
-  "checkOut": "Check Out",
+  "chooseCity": "Choose city",
+  "location": "Location",
+  "checkIn": "Check in",
+  "checkOut": "Check out",
+  "chooseDate": "Choose date",
+  "date": "date",
   "adults": "Adults",
   "children": "Children",
   "submit": "Submit",
@@ -28,5 +32,38 @@
   "minElevenChars": "must be at least 11 characters long!",
   "mustContainDotCom": "must contain .com in the name!",
   "mustBeOverSixteen": "must be over 16!",
-  "cannotBeOver": "cannot be over"
+  "cannotBeOver": "Cannot be over",
+  "lightMode": "Light mode",
+  "darkMode": "Dark mode",
+  "pricing": "Pricing",
+  "services": "Services",
+  "deskSupport": "Desk Support",
+  "ourMission": "Our mission",
+  "career": "Career",
+  "privacy": "Privacy",
+  "termsOfUse": "Terms of Use",
+  "discoverPlace": "Discover place",
+  "homeBannerTextUp": "Discover Extraordinary Comfort in Hotels",
+  "homeBannerTextDown": "Have you ever come across a hotel that feels like home? If not, you can find the hotel here.",
+  "bookingHotel": "Booking Hotel",
+  "homeBookingHotelUnder": "Let's start ordering your place to stay.",
+  "emailEnter": "Enter your email here",
+  "invalidEmail": "Invalid email format",
+  "requiredEmail": "Email is required",
+  "subscribe": "Subscribe",
+  "joinOurNewsletter": "Join our newsletter",
+  "jointVenture": "A joint venture is an application to collect fees from an agreed plan",
+  "noSpam": "We’ll send you a nice letter once per week. No spam.",
+  "rightsReserved": "All rights reserved.",
+  "quickLink": "Quick Link",
+  "company": "Company",
+  "legalTerms": "Legal Terms",
+  "viewAll": "View All",
+  "recommendedHotel": "Recommended hotel",
+  "monthHotels": "Hotels of the month",
+  "monthHotelsBottom": "Discover our top recommended hotels for you to stay while on vacation or even a business trip.",
+  "benefit": "Benefit",
+  "benefitTitle": "Comfortable facility around hotels",
+  "benefitBody": "With our platform, we also give customer the best facilities to enjoy while they stay in their favourite hotels.",
+  "cannotBeLess": "Cannot be less than"
 }
