Authentication implementation Hotels page was created

--- a/front-end/public/locales/en/translation.json
+++ b/front-end/public/locales/en/translation.json
@@ -5,8 +5,8 @@
   "destination": "Destination",
   "chooseCity": "Choose city",
   "location": "Location",
-  "checkIn": "Check in",
-  "checkOut": "Check out",
+  "checkIn": "check in",
+  "checkOut": "check out",
   "chooseDate": "Choose date",
   "date": "date",
   "adults": "Adults",
@@ -22,6 +22,7 @@
   "firstName": "First Name",
   "lastName": "Last Name",
   "email": "Email",
+  "emailAddress": "Email address",
   "age": "Age",
   "gender": "Gender",
   "male": "Male",
@@ -29,10 +30,11 @@
   "another": "Another",
   "isRequired": "is required!",
   "minThreeChars": "must be at least 3 characters long!",
+  "minFiveChars": "must be at least 5 characters long!",
   "minElevenChars": "must be at least 11 characters long!",
-  "mustContainDotCom": "must contain .com in the name!",
   "mustBeOverSixteen": "must be over 16!",
-  "cannotBeOver": "Cannot be over",
+  "thereCanBeNoMore": "There can be no more than",
+  "cannotBeOver": "cannot be over",
   "lightMode": "Light mode",
   "darkMode": "Dark mode",
   "pricing": "Pricing",
@@ -50,6 +52,7 @@
   "emailEnter": "Enter your email here",
   "invalidEmail": "Invalid email format",
   "requiredEmail": "Email is required",
+  "invalidPassword": "Invalid password format",
   "subscribe": "Subscribe",
   "joinOurNewsletter": "Join our newsletter",
   "jointVenture": "A joint venture is an application to collect fees from an agreed plan",
@@ -65,5 +68,28 @@
   "benefit": "Benefit",
   "benefitTitle": "Comfortable facility around hotels",
   "benefitBody": "With our platform, we also give customer the best facilities to enjoy while they stay in their favourite hotels.",
-  "cannotBeLess": "Cannot be less than"
+  "cannotBeLess": "Cannot be less than",
+  "username": "Username",
+  "password": "Password",
+  "signIn": "Sign in",
+  "signInButton": "Sign in",
+  "haveAnAccount": "Have an account",
+  "doNotHaveAnAccount": "Don't have an account",
+  "or": "or",
+  "forgotPassword": "Forgot password",
+  "getStarted": "Get started",
+  "server-errors": {
+    "required_fields_not_filled": "Required fields are not filled in!",
+    "user_exists": "The user with this email already exists!",
+    "password_hashing_trouble": "Password hashing trouble.",
+    "registration_troubles": "Registration troubles.",
+    "enter_email_and_password": "Please, enter an email address and password!",
+    "incorrect_user_data": "Incorrect user data!",
+    "password_comparison_error": "Password comparison error.",
+    "authorization_token_missing": "Authorization token is missing!",
+    "invalid_token": "Invalid token!",
+    "user_not_found": "The user is not found!",
+    "data_loading_failed": "Data loading failed!",
+    "hotel_not_found": "Hotel is not found!"
+  }
 }
