--- a/front-end/public/locales/ua/translation.json
+++ b/front-end/public/locales/ua/translation.json
@@ -5,8 +5,8 @@
   "destination": "Пункт призначення",
   "chooseCity": "Оберіть місто",
   "location": "Місце призначення",
-  "checkIn": "Дата заселення",
-  "checkOut": "Дата виселення",
+  "checkIn": "дата заселення",
+  "checkOut": "дата виселення",
   "chooseDate": "Оберіть дату",
   "date": "дата",
   "adults": "Дорослі",
@@ -22,6 +22,7 @@
   "firstName": "Ім'я",
   "lastName": "Прізвище",
   "email": "Електронна пошта",
+  "emailAddress": "Електронна пошта",
   "age": "Вік",
   "gender": "Стать",
   "male": "Чоловіча",
@@ -29,10 +30,11 @@
   "another": "Інше",
   "isRequired": "є обов'язковим полем!",
   "minThreeChars": "має бути не менше 3 символів!",
+  "minFiveChars": "має бути не менше 5 символів!",
   "minElevenChars": "має бути не менше 11 символів!",
-  "mustContainDotCom": "має містити .com у назві!",
   "mustBeOverSixteen": "повинен бути більше 16 років!",
-  "cannotBeOver": "Не може бути більше ніж",
+  "cannotBeOver": "не може бути більше ніж",
+  "thereCanBeNoMore": "Не може бути більше ніж",
   "lightMode": "Світлий режим",
   "darkMode": "Темний режим",
   "pricing": "Ціни",
@@ -48,7 +50,8 @@
   "bookingHotel": "Бронювання готелю",
   "homeBookingHotelUnder": "Розпочніть бронювання місця для проживання.",
   "emailEnter": "Введіть свій email",
-  "invalidEmail": "Невірний формат email",
+  "invalidEmail": "Невірний формат електронної адреси",
+  "invalidPassword": "Невірний формат паролю",
   "requiredEmail": "Поле email є обов'язковим",
   "subscribe": "Підписатися",
   "joinOurNewsletter": "Підпишіться на нашу розсилку",
@@ -65,5 +68,28 @@
   "benefit": "Переваги",
   "benefitTitle": "Зручне розташування навколо готелів",
   "benefitBody": "Наша платформа забезпечує клієнтам максимальний комфорт для приємного відпочинку в улюблених готелях.",
-  "cannotBeLess": "Не може бути менше ніж"
+  "cannotBeLess": "Не може бути менше ніж",
+  "username": "Імʼя користувача",
+  "password": "Пароль",
+  "signIn": "Увійдіть",
+  "signInButton": "Увійти",
+  "haveAnAccount": "Маєте акаунт",
+  "doNotHaveAnAccount": "Не маєте акаунту",
+  "or": "або",
+  "forgotPassword": "Забули пароль",
+  "getStarted": "Створіть",
+  "server-errors": {
+    "required_fields_not_filled": "Не заповнено обов’язкові поля!",
+    "user_exists": "Користувач з таким email вже існує!",
+    "password_hashing_trouble": "Проблема з хешуванням пароля.",
+    "registration_troubles": "Проблеми з реєстрацією.",
+    "enter_email_and_password": "Будь ласка, введіть email та пароль!",
+    "incorrect_user_data": "Невірні дані користувача!",
+    "password_comparison_error": "Помилка при порівнянні паролів.",
+    "authorization_token_missing": "Відсутній токен авторизації!",
+    "invalid_token": "Невірний токен!",
+    "user_not_found": "Користувача не знайдено!",
+    "data_loading_failed": "Не вдалося завантажити дані!",
+    "hotel_not_found": "Готель не знайдено!"
+  }
 }
