--- a/front-end/public/locales/ua/translation.json
+++ b/front-end/public/locales/ua/translation.json
@@ -19,6 +19,8 @@
   "login": "Логін",
   "logout": "Вихід",
   "profile": "Профіль",
+  "favorite": "Улюблені",
+  "favoriteHotels": "Улюблені готелі",
   "firstName": "Ім'я",
   "lastName": "Прізвище",
   "email": "Електронна пошта",
@@ -86,8 +88,8 @@
   "diffMinMax": "Мінімальна та максимальна різниця має бути не менше {{num}}",
   "highRated": "Від найкращих",
   "lowRated": "Від найгірших",
-  "highPrice": "Від дешевих",
-  "lowPrice": "Від дорогих",
+  "highPrice": "Від дорогих",
+  "lowPrice": "Від дешевих",
   "belowMinimum": "Значення нижче мінімально допустимого",
   "aboveMaximum": "Значення перевищує максимально допустиме",
   "budgetPerNight": "Ваш бюджет за ніч",
@@ -96,6 +98,7 @@
   "showMore": "Показати більше",
   "comfortInHotels": "Відкрийте для себе надзвичайний комфорт у готелях",
   "exclusiveRewardsInEveryCorner": "Знаходьте ексклюзивні винагороди в будь-якому куточку світу!",
+  "hotels": "Готелі",
   "features": {
     "breakfast": "Сніданок включено"
   },
