Price filter was fixed. Keys of the features were fixed. Top filter clear button functionality was fixed. Error 404 page text color was fixed. About us page was created.

--- a/front-end/public/locales/en/translation.json
+++ b/front-end/public/locales/en/translation.json
@@ -100,6 +100,19 @@
   "comfortInHotels": "Discover Extraordinary Comfort in Hotels",
   "exclusiveRewardsInEveryCorner": "Find exclusive rewards in every corner of the world!",
   "hotels": "Hotels",
+  "aboutWelcome": "Welcome to HOTEE !",
+  "aboutWelcomeDescription": "At HOTEE, we are passionate about making your travel experience seamless and stress-free. Our platform offers curated hotel booking services, ensuring comfort, convenience, and reliability. Since 2025, we have been committed to providing top-quality accommodations, helping travelers find the perfect stay with ease. Your journey starts with us – explore, book, and relax!",
+  "aboutVision": "Vision",
+  "aboutVisionDescription": "We aim to be a leading and trusted name in the hospitality industry, known for simplifying hotel booking and enhancing the travel experience. Our goal is to make HOTEE the preferred choice for travelers seeking comfort, reliability, and effortless booking.",
+  "aboutGoal": "Our Goal",
+  "aboutGoalDescription": "To provide a seamless and efficient hotel booking experience by offering a user-friendly platform with carefully selected accommodations. We strive to make travel stress-free and enjoyable, ensuring that every guest can book with confidence.",
+  "aboutMission": "Mission",
+  "aboutMissionDescription": "HOTEE is dedicated to being the ultimate platform for travelers looking for quality, convenience, and assurance in their hotel stays. We focus on delivering an intuitive booking process, reliable accommodation options, and exceptional customer support to make every journey a hassle-free adventure.",
+  "aboutMadeUsSuccessful": "What Made Us successful ?",
+  "aboutMadeUsSuccessfulDescription": "Join us and be part of our dynamic team, where your skills and talents can thrive!",
+  "vacantCareers": "Vacant Careers",
+  "findMore": "Find more",
+  "favouritePlacesList": "List your Favourite Places",
   "features": {
     "breakfast": "Breakfast included"
   },
