--- a/front-end/public/locales/ua/translation.json
+++ b/front-end/public/locales/ua/translation.json
@@ -99,6 +99,19 @@
   "comfortInHotels": "Відкрийте для себе надзвичайний комфорт у готелях",
   "exclusiveRewardsInEveryCorner": "Знаходьте ексклюзивні винагороди в будь-якому куточку світу!",
   "hotels": "Готелі",
+  "aboutWelcome": "Ласкаво просимо до HOTEE !",
+  "aboutWelcomeDescription": "У HOTEE ми прагнемо зробити вашу подорож безперешкодною та безтурботною. Наша платформа пропонує добірні послуги з бронювання готелів, гарантуючи комфорт, зручність і надійність. З 2025 року ми прагнемо надавати високоякісне житло, допомагаючи мандрівникам з легкістю знайти ідеальне місце для відпочинку. Ваша подорож починається з нас - досліджуйте, бронюйте та відпочивайте!",
+  "aboutVision": "Бачення",
+  "aboutVisionDescription": "Ми прагнемо бути провідним і надійним брендом в індустрії гостинності, відомим завдяки спрощенню бронювання готелів та покращенню досвіду подорожей. Наша мета - зробити HOTEE кращим вибором для мандрівників, які шукають комфорт, надійність і легке бронювання.",
+  "aboutGoal": "Наша мета",
+  "aboutGoalDescription": "Забезпечити безперебійний та ефективний процес бронювання готелів, пропонуючи зручну платформу з ретельно відібраними помешканнями. Ми прагнемо зробити подорожі безтурботними та приємними, гарантуючи, що кожен гість може бронювати з упевненістю.",
+  "aboutMission": "Місія",
+  "aboutMissionDescription": "HOTEE прагне бути ідеальною платформою для мандрівників, які шукають якість, зручність і гарантії під час перебування в готелях. Ми зосереджені на інтуїтивно зрозумілому процесі бронювання, надійних варіантах розміщення та винятковій підтримці клієнтів, щоб зробити кожну подорож безтурботною пригодою.",
+  "aboutMadeUsSuccessful": "Що зробило нас успішними ?",
+  "aboutMadeUsSuccessfulDescription": "Приєднуйтесь до нас і станьте частиною нашої динамічної команди, де ваші навички та таланти зможуть розквітнути!",
+  "findMore": "Знайди більше",
+  "vacantCareers": "Вакансій",
+  "favouritePlacesList": "Ваші улюблені місця",
   "features": {
     "breakfast": "Сніданок включено"
   },
