--- a/front-end/public/locales/ua/translation.json
+++ b/front-end/public/locales/ua/translation.json
@@ -119,6 +119,8 @@
   "aboutHotel": "Про готель",
   "features": "Особливості",
   "phoneNumber": "Номер телефону",
+  "reservedHotels": "Зарезервовані готелі",
+  "favouritePlaces": "Улюблені місця",
   "features-list": {
     "breakfast": "Сніданок включено",
     "all-inclusive": "Все включено",
