ESLint was implemented, and all problems were fixed The library dependencies problem was fixed The Register and Login pages buttons were recoloured

--- a/front-end/public/locales/en/translation.json
+++ b/front-end/public/locales/en/translation.json
@@ -122,6 +122,7 @@
   "phoneNumber": "Phone number",
   "reservedHotels": "Reserved hotels",
   "favouritePlaces": "Favourite places",
+  "successSubscription": "Subscription to {{email}} successful!",
   "features-list": {
     "breakfast": "Breakfast included",
     "all-inclusive": "All-inclusive",
