--- a/front-end/public/locales/en/translation.json
+++ b/front-end/public/locales/en/translation.json
@@ -71,6 +71,12 @@
   "benefit": "Benefit",
   "benefitTitle": "Comfortable facility around hotels",
   "benefitBody": "With our platform, we also give customer the best facilities to enjoy while they stay in their favourite hotels.",
+  "freeAccommodation": "Free Accommodation",
+  "freeAccommodationDescription": "Accommodation for you to enjoy exploring around the hotels.",
+  "fitnessCenter": "Fitness Center",
+  "fitnessCenterDescription": "For those of you who like to do fitness thing, fitness is free.",
+  "freeBreakfast": "Free Breakfast",
+  "freeBreakfastDescription": "Whose does not like meal in the morning, breakfast is free.",
   "cannotBeLess": "Cannot be less than",
   "username": "Username",
   "password": "Password",
