--- a/front-end/public/locales/ua/translation.json
+++ b/front-end/public/locales/ua/translation.json
@@ -71,6 +71,12 @@
   "benefit": "Переваги",
   "benefitTitle": "Зручне розташування навколо готелів",
   "benefitBody": "Наша платформа забезпечує клієнтам максимальний комфорт для приємного відпочинку в улюблених готелях.",
+  "freeAccommodation": "Безкоштовне проживання",
+  "freeAccommodationDescription": "Проживання для вас, щоб насолодитися дослідженням околиць готелів.",
+  "fitnessCenter": "Фітнес-центр",
+  "fitnessCenterDescription": "Для тих, хто любить займатися фітнесом, фітнес безкоштовний.",
+  "freeBreakfast": "Безкоштовний сніданок",
+  "freeBreakfastDescription": "Хто не любить їсти вранці, тому сніданок безкоштовний.",
   "cannotBeLess": "Не може бути менше ніж",
   "username": "Імʼя користувача",
   "password": "Пароль",
